--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 		"spatie/laravel-analytics": "~1.1",
 		"caffeinated/menus": "~2.0",
 		"yajra/laravel-datatables-oracle": "~6.0",
-		"thedgmbh/modules": "dev-master"
+		"thedgmbh/modules": "dev-master",
+		"zizaco/entrust": "5.2.x-dev"
 
 	},
 	"require-dev": {
