--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "morris.js": "~0.5.1",
     "jquery-floating-social-share": "~1.1.0",
     "tinymce": "~4.2.5",
-    "tinymce-localautosave": "~0.4.2"
+    "tinymce-localautosave": "~0.4.2",
+    "chosen": "~1.5.1"
   }
 }
