--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
     "jquery-floating-social-share": "~1.1.0",
     "tinymce": "~4.2.5",
     "tinymce-localautosave": "~0.4.2",
-    "chosen": "~1.5.1"
+    "chosen": "~1.5.1",
+    "eonasdan-bootstrap-datetimepicker": "~4.17.37",
+    "pickadate": "~3.5.6"
   }
 }
