--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 		"kris/laravel-form-builder": "1.6.*",
 		"laracasts/flash": "~1.3",
 		"mews/purifier": "~2.0",
-		"cviebrock/eloquent-sluggable" : "~3.1.4",
+		"cviebrock/eloquent-sluggable" : "^4.0.2",
 		"barryvdh/laravel-elfinder": "0.3.*",
 		"spatie/laravel-analytics": "~1.1",
 		"caffeinated/menus": "~2.0",
